--- a/assets/css/users.css
+++ b/assets/css/users.css
@@ -1,5 +1,9 @@
-.main-content h1 {
+.user-manager h1 {
   margin-bottom: 20px;
+  color: #002105;
+}
+.user-manager p {
+  color: #002105;
 }
 .konten-pengguna {
   width: 100%;
@@ -56,7 +60,7 @@
 .konten-pengguna .users .user .left .user-icon {
   width: 50px;
   height: 50px;
-  background-color: #d5e8cf;
+  background-color: #ecf3e7;
   justify-content: center;
   border-radius: 50%;
   margin-right: 20px;
@@ -64,6 +68,7 @@
 .konten-pengguna .users .user .left .user-icon span {
   color: #002105;
   font-size: 28px;
+  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 .konten-pengguna .users .user .left .user-name {
   flex-direction: column;
